--- a/index.htm
+++ b/index.htm
@@ -26,10 +26,11 @@
     <table border="0" width="100%" height="80px">
         <tbody><tr>
             <th> <font face="Tahoma" style="font-size: 30px;"> Sensei. </font> </th>
-            <th> <a href="#"><font face="Tahoma" style="font-size: 18px;">Home </font> </a> </th>
-            <th> <pre>       <a href="about.html"><font face="Tahoma" style="font-size: 18px;">About</font></a></pre></th>
-            <th> <a href="https://www.linkedin.com/in/suhasghosal/"><font face="Tahoma" style="font-size: 18px;"><button>Reach Me</button></font></a></th>
-            </tr>
+            <th> <a href="index.htm"><font face="Tahoma" style="font-size: 18px;">Home</font> </a> </th>
+            <th><pre><a href="about.html"><font face="Tahoma" style="font-size: 18px;"> About</font></a></pre></th>
+            <th><pre><a href="projects.htm"><font face="Tahoma" style="font-size: 18px;">Projects</font></a></pre></th>
+            <th><pre><a href="https://www.linkedin.com/in/suhasghosal/"><font face="Tahoma" style="font-size: 18px;"><button>Reach Me</button></font></a></th>
+            </tr></pre>
     </tbody></table>
     <div class="container">
         <div style="width: 183px; margin: 0 auto; background: #000; color: #fff;">
