--- a/index.htm
+++ b/index.htm
@@ -27,8 +27,8 @@
         <tbody><tr>
             <th> <font face="Tahoma" style="font-size: 30px;"> Sensei. </font> </th>
             <th> <a href="index.htm"><font face="Tahoma" style="font-size: 18px;">Home</font> </a> </th>
-            <th><pre><a href="about.html"><font face="Tahoma" style="font-size: 18px;"> About</font></a></pre></th>
-            <th><pre><a href="projects.htm"><font face="Tahoma" style="font-size: 18px;">Projects</font></a></pre></th>
+            <th><pre><a href="https://suhas-portfolio-weld.vercel.app/about.html"><font face="Tahoma" style="font-size: 18px;"> About</font></a></pre></th>
+            <th><pre><a href="https://suhas-portfolio-weld.vercel.app/projects.htm"><font face="Tahoma" style="font-size: 18px;">Projects</font></a></pre></th>
             <th><pre><a href="https://www.linkedin.com/in/suhasghosal/"><font face="Tahoma" style="font-size: 18px;"><button>Reach Me</button></font></a></th>
             </tr></pre>
     </tbody></table>
