--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="icon" type="image/x-icon" href="1.png">
     <style>
         body {
           background-image: url('2.jpeg');
